<resources>
    <string name="app_name">DIMP</string>
    <string name="app_exit_tips">再按一次退出应用</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="enterprise_id_code">企业标识码</string>
    <string name="remember_userinfo">记住用户信息</string>
    <string name="use_vpn">使用VPN</string>
    <string name="login">登录</string>
    <string name="setting_up">配置</string>
    <string name="big">大</string>
    <string name="small">小</string>
    <string name="please_check_the_network">请检查网络</string>
    <string name="please_enter_the_user_name">请输入用户名</string>
    <string name="please_enter_your_password">请输入密码</string>
    <string name="Enter_your_enterprise_id_or_configure_the_semf_service_address">请输入企业标识码或者配置SEMF服务地址</string>
    <string name="please_wait">请稍后</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="screening">筛选</string>
    <string name="a_new_version_of_the_application_has_been_detected_is_it_updated">检测到应用有新版本，是否更新？</string>
    <string name="permissions_not_to_down">检查到新版本，但您的权限被拒绝，无法使用存储空间，无法下载最新版本。</string>
    <string name="to_generate_the_qr_code_you_need_read_and_write_permission_please_authorize_it_and_try_again">
        生成二维码需要读写权限，请授权后重试</string>
    <string name="click_again_exit_app">再按一次退出应用</string>
    <string name="configuration">配置</string>
    <string name="semf_service_address">SEMF服务地址</string>
    <string name="license_service_address">license地址</string>
    <string name="vpn_model">vpn模式</string>
    <string name="easy_app">EasyApp</string>
    <string name="vpn_address">vpn地址</string>
    <string name="account">账号</string>
    <string name="there_are_no_current_performance_indicators">当前无绩效指标</string>
    <string name="save">保存</string>
    <string name="l_three_vpn">L3VPN</string>
    <string name="qr_code_generation_fails">二维码生成失败</string>
    <string name="qr_code">二维码</string>
    <string name="scan_the_qr_code">扫描二维码</string>
    <string name="album">相册</string>
    <string name="please_scan_the_qr_code_in_the_viewfinder_frame">请将二维码置于取景框内扫描</string>
    <string name="choose_photos">选择相片</string>
    <string name="this_qr_code_is_not_supported">不支持此二维码</string>
    <string name="set_the_password_lock">设置密码锁</string>
    <string name="the_current_version">当前版本</string>
    <string name="adapt_semf_service">适配SEMF服务</string>
    <string name="clear_the_cache">清除缓存</string>
    <string name="fingerprint_authentication_login">指纹验证登录</string>
    <string name="module_settings">模块设置</string>
    <string name="language_settings">语言设置</string>
    <string name="set">设置</string>
    <string name="are_you_sure_you_want_to_change_the_application_language">
        您确定要更换应用语言吗?
    </string>
    <string name="please_select_four_module">请选择您常用的模块，最多4个，顺序长按可拖动</string>
    <string name="select_up_to_four_modules">最多可选择4个模块</string>
    <string name="your_system_version_is_too_low_to_support_fingerprint_functionality">
        您的系统版本过低，不支持指纹功能
    </string>
    <string name="your_mobile_phone_does_not_support_fingerprint_function">
        您的手机不支持指纹功能
    </string>
    <string name="you_need_to_add_at_least_one_fingerprint_to_your_system_settings">
        您至少需要在系统设置中添加一个指纹
    </string>
    <string name="the_message_center">消息中心</string>
    <string name="set_up_the">设置</string>
    <string name="feedback">意见反馈</string>
    <string name="log_out">退出登录</string>
    <string name="personal_center">个人中心</string>
    <string name="year">年</string>
    <string name="week">周</string>
    <string name="quarter">季度</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="digital_nervous">数字神经</string>
    <string name="my_report">我的报告</string>
    <string name="share_the_report">共享报告</string>
    <string name="report">报告</string>
    <string name="action">行动</string>
    <string name="all_tasks">全部任务</string>
    <string name="has_been_issued">已下达</string>
    <string name="have_received">已接收</string>
    <string name="to_receive">待接收</string>
    <string name="a_new_task">新建任务</string>
    <string name="create">创建</string>
    <string name="inch">寸</string>
    <string name="vertical_screen">竖屏</string>
    <string name="landscape">横屏</string>
    <string name="expiration_date">截止日期: #1</string>
    <string name="create_date">创建日期: #1</string>
    <string name="the_theme_report">主题报表</string>
    <string name="select_a_date">选择日期</string>
    <string name="click_edit_task_Title">点击编辑任务标题（限16字）</string>
    <string name="wit_screen">智慧大屏</string>
    <string name="time_sequence">时间排序</string>
    <string name="task_detail">任务详情</string>
    <string name="detail">详情</string>
    <string name="screen">大屏</string>
    <string name="creation_time">创建时间</string>
    <string name="by_the_time">截止时间</string>
    <string name="playlist">播放内容列表</string>
    <string name="add_a_report_or_picture">添加报表或图片</string>
    <string name="basic_properties">基础属性</string>
    <string name="report_stay_time">报表停留时间</string>
    <string name="report_pre_load_time">报表预载时间</string>
    <string name="report_animation_effect">报表动画效果</string>
    <string name="time">时间</string>
    <string name="global_properties">全局属性</string>
    <string name="report_playing_mode">报表播放模式</string>
    <string name="set_the_prompt">当前报表停留时间剩余5秒开始，预加载下一张报表，设置最后一张报表时，下张报表默认为第一张</string>
    <string name="my_indicators">我的指标</string>
    <string name="search">搜索</string>
    <string name="the_action_plan">行动方案</string>
    <string name="the_warning_message">预警消息</string>
    <string name="report_comments">报表评论</string>
    <string name="management_kanban">经营看板</string>
    <string name="all_the_news">全部消息</string>
    <string name="unread_message">未读消息</string>
    <string name="read_the_message">已读消息</string>
    <string name="assistant">协助人  </string>
    <string name="recipient">接收人  </string>
    <string name="the_current_report_has_no_optional_parameters">当前报告无参数可选</string>
    <string name="common">普通</string>
    <string name="task_type">任务类型</string>
    <string name="special">专项</string>
    <string name="low">低</string>
    <string name="middle">中</string>
    <string name="high">高</string>
    <string name="priority">优先级</string>
    <string name="head">负责人</string>
    <string name="sweep_the_login_code">扫码登录</string>
    <string name="login_prompt">您正在授权另一设备/网站登录此账号\n如果非您本人操作，建议取消</string>
    <string name="whether_to_confirm_authorization">是否确认授权#1投放#2的所有报表</string>
    <string name="confirm_the_information">确认信息</string>
    <string name="put_in_the_time">投放时长</string>
    <string name="hours">小时</string>
    <string name="please_enter_duration">请输入时长</string>
    <string name="for_screen_success">投屏成功</string>
    <string name="cast_screen_failure">投屏失败</string>
    <string name="recall">撤回</string>
    <string name="back_on">重投</string>
    <string name="screen_projection_failed_please_check_the_device">投屏失败，请检查设备</string>
    <string name="sure_to_exit_the_projection_screen">确定退出投屏？</string>
    <string name="filtrate">筛选</string>
    <string name="the_start_time">开始时间</string>
    <string name="the_end_of_time">结束时间</string>
    <string name="the_current_version_is_not_supported">当前不支持此类型报表，请更新后重试</string>
    <string name="report_parameters">报表参数</string>
    <string name="to_choose_time">选择时间</string>
    <string name="the_contact">联系人</string>
    <string name="department">部门</string>
    <string name="nearest_contact">最近联系人</string>
    <string name="index_of_correlation">相关指标</string>
    <string name="index">指标</string>
    <string name="the_dimension">维度</string>
    <string name="task_details">任务详情</string>
    <string name="action_plan_snapshot_comparison">行动方案/快照对比</string>
    <string name="organization_dimension">组织维度</string>
    <string name="please_fill_in_the_title">请填写标题</string>
    <string name="please_select_the_person_in_charge">请选择负责人</string>
    <string name="please_fill_in_the_task_details">请填写任务详情</string>
    <string name="dont_allow_permissions">权限未被允许</string>
    <string name="select_picture">选择图片</string>
    <string name="picture">图片</string>
    <string name="taking_pictures">拍照</string>
    <string name="photo_album">相册</string>
    <string name="target">目标</string>
    <string name="challenge">挑战</string>
    <string name="annotation">注释</string>
    <string name="guaranteed">保底</string>
    <string name="at_least_one_indicator_can_be_selected_before_an_action_plan_can_be_issued">至少选择一个指标才可以下发行动方案</string>
    <string name="action_plan_created_successfully">行动方案创建成功</string>
    <string name="merchants">租户</string>
    <string name="please_enter_merchant">请输入租户</string>
    <string name="management">管理</string>
    <string name="complete">完成</string>
    <string name="board">看板</string>
    <string name="the_current_page">当前页面:</string>
    <string name="the_page_is">第%s页呀</string>
    <string name="plan">计划</string>
    <string name="same_term">同期</string>
    <string name="actual">实际</string>
    <string name="year_on_year">同比</string>
    <string name="month_on_month">环比</string>
    <string name="the_new_page">新增页</string>
    <string name="delete_the_page">删除页</string>
    <string name="are_you_sure_to_delete_all_data_on_this_page_and_current_page">确认删除本页和当前页所有数据?</string>
    <string name="delete_the_success">删除成功</string>
    <string name="this_page_is_empty_after_deleting_the_data_and_will_be_deleted_here">删除该数据后本页为空，此处将会删除</string>
    <string name="setup_board">看板设置</string>
    <string name="custom_page_name">自定义页名</string>
    <string name="time_to_type">时间类型</string>
    <string name="custom_dimension">自定义维度</string>
    <string name="personalized_board">个性化看板</string>
    <string name="add_all_metrics">添加全部指标</string>
    <string name="cancel_adding_all_metrics">取消添加全部指标</string>
    <string name="select_all">全选</string>
    <string name="please_enter_a_page_name">请输入页名</string>
    <string name="please_select_dimension">请选择维度</string>
    <string name="please_select_at_least_one_metric">请至少选择一个指标</string>
    <string name="add_success">添加成功</string>
    <string name="add_indicators">添加指标</string>
    <string name="my_index">我的指标</string>
    <string name="recommend_index">推荐指标</string>
    <string name="all_indicators">所有指标</string>
    <string name="note">备注:</string>
    <string name="the_target">目标</string>
    <string name="the_name_of_the_kanban">看板名称:</string>
    <string name="the_search_content_cannot_be_empty">搜索内容不能为空</string>
    <string name="set_the_current_report_to_default">设置当前报表为默认</string>
    <string name="cancel_the_current_report_as_default">取消当前报表为默认</string>
    <string name="reply">回复</string>
    <string name="a_reply">展开回复</string>
    <string name="pack_up">收起</string>
    <string name="selected_people">已选择:%s人</string>
    <string name="selected_department">已选择:%s个部门</string>
    <string name="the_time_parameter">时间参数</string>
    <string name="the_dimension_parameters">维度参数</string>
    <string name="custom_parameter">自定义参数</string>
    <string name="time_parameter_query_error">时间参数查询错误</string>
    <string name="my_choice">我的选择</string>
    <string name="clear">清除</string>
    <string name="all_the_reference">全部参考</string>
    <string name="temporarily_no_data">暂无数据</string>
    <string name="no_optional_parameter">无可选参数</string>
    <string name="the_search_results">搜索结果</string>
    <string name="confirm_the_deletion">确认删除</string>
    <string name="cannot_duplicate_kanban_names">不可重复命名看板名称</string>
    <string name="review_the_task">审核任务</string>
    <string name="whether_completed">是否完成 :</string>
    <string name="is">是</string>
    <string name="no_end_task">否(结束任务)</string>
    <string name="no_do_not_finish_the_task">否(不结束任务)</string>
    <string name="description_required">说明(*必填)</string>
</resources>