<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom">

    <TextView
        android:id="@+id/tv_first"
        android:layout_width="match_parent"
        android:layout_height="@dimen/W100"
        android:layout_marginLeft="@dimen/W20"
        android:layout_marginRight="@dimen/W20"
        android:gravity="center"
        android:text="@string/taking_pictures"
        android:background="@drawable/member_common"
        android:textSize="18sp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/H1"
        android:layout_marginLeft="@dimen/W35"
        android:layout_marginRight="@dimen/W35"
        android:background="@color/c_e6e6e6">
    </TextView>

    <TextView
        android:id="@+id/tv_second"
        android:layout_width="match_parent"
        android:layout_height="@dimen/W100"
        android:layout_marginBottom="@dimen/H20"
        android:layout_marginLeft="@dimen/W20"
        android:layout_marginRight="@dimen/W20"
        android:text="@string/photo_album"
        android:gravity="center"
        android:background="@drawable/member_common"
        android:textSize="18sp">
    </TextView>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/W100"
        android:layout_marginBottom="@dimen/H20"
        android:layout_marginLeft="@dimen/W20"
        android:layout_marginRight="@dimen/W20"
        android:gravity="center"
        android:text="@string/cancel"
        android:background="@drawable/member_common"
        android:textSize="18sp">
    </TextView>
</LinearLayout>