<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/H2"
        android:background="@color/c_FFFFFF">
    </TextView>

    <TextView
        android:id="@+id/tv_hour"
        android:layout_width="match_parent"
        android:layout_height="@dimen/H66"
        android:gravity="center"
        android:textSize="13sp"
        android:text="@string/hour"
        android:singleLine="true"
        android:textColor="@color/c_000000"
        android:background="@drawable/shape_bg_f8f8fa">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/H2"
        android:background="@color/c_FFFFFF">
    </TextView>

    <TextView
        android:id="@+id/tv_minute"
        android:layout_width="match_parent"
        android:layout_height="@dimen/H66"
        android:gravity="center"
        android:textSize="13sp"
        android:text="@string/minute"
        android:singleLine="true"
        android:textColor="@color/c_000000"
        android:background="@drawable/shape_bg_f8f8fa">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/H2"
        android:background="@color/c_FFFFFF">
    </TextView>

    <TextView
        android:id="@+id/tv_second"
        android:layout_width="match_parent"
        android:layout_height="@dimen/H66"
        android:gravity="center"
        android:text="@string/second"
        android:textSize="13sp"
        android:singleLine="true"
        android:textColor="@color/c_000000"
        android:background="@drawable/shape_bg_f8f8fa">
    </TextView>
</LinearLayout>